--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,13 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="xyz.berinaniesh.simpletamilbible.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="@string/OT"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="xyz.berinaniesh.simpletamilbible.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/NT"
         tools:layout="@layout/fragment_gallery" />
 
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="xyz.berinaniesh.simpletamilbible.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 </navigation>
